# ui/openapi.json
@@ -3087,6 +3087,100 @@
 						"HumanLogin": []
 					}
 				]
+			},
+			"put": {
+				"tags": ["oauth"],
+				"summary": "Update client registration (RFC 7592, not supported)",
+				"operationId": "put_registration_register__client_id__put",
+				"parameters": [
+					{
+						"name": "client_id",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "string",
+							"title": "Client Id"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Successful Response",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					},
+					"422": {
+						"description": "Validation Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPValidationError"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"JenticApiKey": []
+					},
+					{
+						"AgentOauthAccessToken": []
+					},
+					{
+						"HumanLogin": []
+					}
+				]
+			},
+			"delete": {
+				"tags": ["oauth"],
+				"summary": "Delete client registration (RFC 7592, not supported)",
+				"operationId": "delete_registration_register__client_id__delete",
+				"parameters": [
+					{
+						"name": "client_id",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "string",
+							"title": "Client Id"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Successful Response",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					},
+					"422": {
+						"description": "Validation Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HTTPValidationError"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"JenticApiKey": []
+					},
+					{
+						"AgentOauthAccessToken": []
+					},
+					{
+						"HumanLogin": []
+					}
+				]
 			}
 		},
 		"/search": {
